fixed blurring on safari

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -72,6 +72,7 @@ html, body {
     width: 100vw;
     height: 100vh;
     background: rgba(246, 246, 246, 0.81);
+    -webkit-backdrop-filter: blur(25px);
     backdrop-filter: blur(25px);
     z-index: 2;
   }
